@@ -4,6 +4,8 @@ v0.5.0
   [Enhancements]
   - Added --exclude-final-dot option.
 
+  - Added --only-matching option, GH#7.
+
 v0.4.3    2023-11-08 13:15:30 Europe/London
   [Documentation]
   - Fixed grammar in the Changes.
